github pages theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-cayman
-title: 'My Portfolio'
+title: 'Ticorporate Portfolio'
+description: 'Ticorporate Portfolio'
+url: 'https://rikuruotsalainen.github.io/AmethystPortfolio/'
